--- a/references.bib
+++ b/references.bib
@@ -213,3 +213,20 @@
   year={2012},
   publisher={IEEE}
 }
+
+@inproceedings{xiao2019merging,
+	year = {2019},
+	month = oct,
+	publisher = {{IEEE}},
+	author = {Wei Xiao and Christos G. Cassandras and Calin Belta},
+	title = {Decentralized Merging Control in Traffic Networks with Noisy Vehicle Dynamics: a Joint Optimal Control and Barrier Function Approach},
+	booktitle = {2019 {IEEE} Intelligent Transportation Systems Conference ({ITSC})}
+}
+
+@inproceedings{xiao2020merging,
+	month = jul,
+	publisher = {{IEEE}},
+	author = {Wei Xiao and Christos G. Cassandras},
+	title = {Decentralized Optimal Merging Control for Connected and Automated Vehicles with Optimal Dynamic Resequencing},
+	booktitle = {2020 American Control Conference ({ACC})}
+}
