--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,9 @@
 
 \include{preamble} % for the packages and the macros
 
-\title{Abstraction Based Controller Design with Nominal Controller}
+\title{Hierarchical Control for Multi-Agent Systems\\ with Formal Guarantees}
 
-\author{Mehrdad, Kaushik, Mahmoud, Rupak, Sadegh}
+%\author{Mehrdad, Kaushik, Mahmoud, Rupak, Sadegh}
 
 \makeatletter
 \@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
