new related workes added

--- a/references.bib
+++ b/references.bib
@@ -230,3 +230,13 @@
 	title = {Decentralized Optimal Merging Control for Connected and Automated Vehicles with Optimal Dynamic Resequencing},
 	booktitle = {2020 American Control Conference ({ACC})}
 }
+@article{jackson2020scalable,
+  title={Scalable Cooperative Transport of Cable-Suspended Loads With UAVs Using Distributed Trajectory Optimization},
+  author={Jackson, Brian E and Howell, Taylor A and Shah, Kunal and Schwager, Mac and Manchester, Zachary},
+  journal={IEEE Robotics and Automation Letters},
+  volume={5},
+  number={2},
+  pages={3368--3374},
+  year={2020},
+  publisher={IEEE}
+}
