--- a/related_work.tex
+++ b/related_work.tex
@@ -14,5 +14,6 @@ Here are the papers that we know of:
 	\item A robust scheme for controlling linear dynamical systems with additive bounded noise and (general) LTL specification \cite{Yang2017milp}. They use mixed integer linear programming (MILP) to design a nominal controller satisfying a given LTL specification in the absence of noise and then design a regulating controller to account for the noise term.
 	\item A method to control a robot swarm (modelled as planar robots with potentially different speed bounds) such that a given specification (expressable in a fragment of LTL) is satisfied \cite{Chen2018cbf}. Some extent of communication between robots is required. The collision avoidance is guaranteed via designing control barrier functions for each pair of robots. No source of disturbance is considered in the model and the proposed solution does not work for agents modeled not as planar robots.
 	\item Controlling (homogeneous) robot swarms (modelled as finite state transition systems) for satisfying specifications expressed in a temporal logic for reasoning about the collective behavior of multiple agents (cLTL) \cite{Shahin2017cltl}. Their method can potantially account for bounded noise and non-linearities, but not heterogeneity.
-	\item optimal control approaches \MS{Mehrdad might know a few of them}
+	\item Controlling multi-robot (it can be heterogeneous) using ALTRO \cite{jackson2020scalable}. very similar to our work without formal guarantee but works in real-time. they are making centralized system by combining dynamics of several quads. 
+	\item The paper that we got merging example from that\cite{xiao2019merging}. They are using optimal control + control barrier function. they are can handle disturbance and in addition they are optimizing time and fuel consummation and more constraints but they are considering linear model.
 \end{enumerate}
